--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "session": "^0.1.0",
+    "socket.io": "^4.8.0",
     "stream": "^0.0.2",
     "uuid": "^9.0.1"
   }
